--- a/kinalat.html
+++ b/kinalat.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Szabi Étterem kínálata</title>
 </head>
 <body>
     <ul>    
         <li id='akciok'>
-           <h3> Akciók</h3>
+           <h3> Akciók:</h3>
             <p>
                 Napi akcióban tudsz venni egy 32cm-es pizzát
                 + üdítővel<b> csak 900 Ft</b><br><br>
-                <img width="480" height="100" src="/kepek/piud.jpg"></img>
+                <img id="kozepes" src="kepek/piud.jpg"></img>
 
 
             </p>
@@ -20,26 +21,26 @@
         <li id='napi-menu'>
          <h3>Napi-menü</h3>  
          <p>
-            <b>Leves:</b><br>
+            Leves:<br>
              Húsleves cérnametélttel<br><br>
-             <img width="100" height="100" src="/kepek/husleves.jpg"></img>
+             <img id="kis" src="kepek/husleves.jpg"></img>
 
-           <p><b>Főétel:</b><br>
+           <p>Főétel:<br>
             Birkapörkölt+nokedlivel+
             választható salátával<br><br>
-            <img width="100" height="100" src="/kepek/Pörkölt.jpg"></img>
+            <img id="kis" src="kepek/Pörkölt.jpg"></img>
             </p>
             <p>
-            <b>Desszert:</b><br>
+            Desszert:<br>
             Aranygaluska vaniliasodóval<br><br>
-            <img width="100" height="100" src="/kepek/aranyg.jpg"></img>
+            <img id="kis" src="kepek/aranyg.jpg"></img>
             </p>    
 
         </p>
         </li>
         <li id='Pizzak'>
           <h3>Pizzák </h3>
-          <img width="100" height="100" src="/kepek/IMG_20200229_114236.jpg"></img>
+          <img id="kis" src="kepek/IMG_20200229_114236.jpg"></img>
         </li>
         <li id='salatak'>
           <h3>Saláták</h3>  
