--- a/rolunk.html
+++ b/rolunk.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Szabi Étterem</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
         </tr>
         <tr>
             <td><b>Vasárnap:</b></td>
-            <td style="color: red;">ZÁRVA<td>
+            <td id="td1">ZÁRVA</td>
         </tr>
     </table>
     <p><a href="index.html">Főoldal</a></p>
