new files added

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <title>Szabi Étterem</title>
 </head>
 <body>
-   <h1> Üdvözlünk Szabi Pizzázójában</h1>
-   <p>
+    
+    <h1> Üdvözlünk Szabi Pizzázójában</h1>
+    <div class="menu">
+        <p><a href="kinalat.html">Kínálat</a></p>
+        <p><a href="rolunk.html">Rólunk</a></p>
+
+    </div>
+    <p>
        Böngéssz kínálatunkban....
    </p>
-   <p><a href="kinalat.html">Kínálat</a></p>
-   <p><a href="rolunk.html">Rólunk</a></p>
+ 
 </body>
 </html>
