--- a/kinalat.html
+++ b/kinalat.html
@@ -7,7 +7,12 @@
     <title>Szabi Étterem kínálata</title>
 </head>
 <body>
-    <ul>    
+    <h1>Étlap</h1>
+    <div class="menu">
+    <p><a href="index.html">Főoldal</a></p>
+    <p><a href="rolunk.html">Rólunk</a></p></div>
+    
+    <ul><div class="box-kin">    
         <li id='akciok'>
            <h3> Akciók:</h3>
             <p>
@@ -17,7 +22,8 @@
 
 
             </p>
-        </li>
+        </li></div>
+        <div class="box-kin">
         <li id='napi-menu'>
          <h3>Napi-menü</h3>  
          <p>
@@ -38,23 +44,28 @@
 
         </p>
         </li>
+        </div>
+        <div class="box-kin">
         <li id='Pizzak'>
           <h3>Pizzák </h3>
           <img id="kis" src="kepek/IMG_20200229_114236.jpg"></img>
         </li>
+        </div>
+        <div class="box-kin">
         <li id='salatak'>
           <h3>Saláták</h3>  
-        </li>
+        </li></div>
+        <div class="box-kin">
         <li id='uditok'>
           <h3>Üdítők</h3>  
-        </li>
+        </li></div>
+        <div class="box-kin">
         <li id='Desszertek'> 
            <h3>Desszertek</h3> 
         </li>
-
+        </div>
     </ul>
-    <p><a href="index.html">Főoldal</a></p>
-    <p><a href="rolunk.html">Rólunk</a></p>
+    
 
 </body>
 </html>
