--- a/rolunk.html
+++ b/rolunk.html
@@ -7,7 +7,10 @@
     <title>Szabi Étterem</title>
 </head>
 <body>
-    <h1>Rólunk</h1>
+    <h1>Rólunk</h1><br>
+    <div class="menu">
+    <p><a href="index.html">Főoldal</a></p>
+    <p><a href="kinalat.html">Kínálat</a></p></div>
     <p>
         Szabi Étterem
 
@@ -29,7 +32,6 @@
             <td id="td1">ZÁRVA</td>
         </tr>
     </table>
-    <p><a href="index.html">Főoldal</a></p>
-    <p><a href="kinalat.html">Kínálat</a></p>
+    
 </body>
 </html>
