del and addes files

--- a/kinalat.html
+++ b/kinalat.html
@@ -23,34 +23,34 @@
 
             </p>
         </li></div>
-        <div class="box-kin">
-        <li id='napi-menu'>
-         <h3>Napi-menü</h3>  
-         <p>
-            Leves:<br>
-             Húsleves cérnametélttel<br><br>
-             <img id="kis" src="kepek/husleves.jpg"></img>
-
-           <p>Főétel:<br>
-            Birkapörkölt+nokedlivel+
-            választható salátával<br><br>
-            <img id="kis" src="kepek/Pörkölt.jpg"></img>
-            </p>
-            <p>
-            Desszert:<br>
-            Aranygaluska vaniliasodóval<br><br>
-            <img id="kis" src="kepek/aranyg.jpg"></img>
-            </p>    
-
-        </p>
-        </li>
+           <div class="box-kin">
+       <h3>Napi-menü</h3>
+         <table>
+         <tr>
+            <td>Leves:</td><br>
+            <td>Húsleves cérnametélttel</td> 
+            <td><img id="kis" src="kepek/husleves.jpg"></td>
+          </tr>
+          <tr>
+           <td>Főétel:</td><br>
+            <td>Birkapörkölt nokedlivel</td>
+            <td><img id="kis" src="kepek/Pirkolt.jpg"></td>
+          </tr>  
+          <tr><td>
+            Desszert:</td>
+            <td>Aranygaluska vaniliasodóval</td> 
+            <td><img id="kis" src="kepek/aranyg.jpg"></td>          
+          </tr>
+        </table>
         </div>
-        <div class="box-kin">
+       <div class="box-kin">
         <li id='Pizzak'>
           <h3>Pizzák </h3>
-          <img id="kis" src="kepek/IMG_20200229_114236.jpg"></img>
-        </li>
-        </div>
+          <table> 
+          <tr><img id="kis" src="kepek/IMG_20200229_114236.jpg"></tr>
+        </tr>
+        </table>
+        </li></div>
         <div class="box-kin">
         <li id='salatak'>
           <h3>Saláták</h3>  
@@ -64,7 +64,7 @@
            <h3>Desszertek</h3> 
         </li>
         </div>
-    </ul>
+          </ul>
     
 
 </body>
