--- a/kinalat.html
+++ b/kinalat.html
@@ -25,7 +25,7 @@
         </li></div>
            <div class="box-kin">
        <h3>Napi-menü</h3>
-         <table>
+         <table class= "kin_tab">
          <tr>
             <td>Leves:</td><br>
             <td>Húsleves cérnametélttel</td> 
@@ -46,7 +46,7 @@
        <div class="box-kin">
         <li id='Pizzak'>
           <h3>Pizzák </h3>
-          <table> 
+          <table class="kin_tab">  
           <tr><img id="kis" src="kepek/IMG_20200229_114236.jpg"></tr>
         </tr>
         </table>
